Update Listas “publicaciones”

--- a/_data/publications.yml
+++ b/_data/publications.yml
@@ -1200,3 +1200,33 @@ papers:
       toward posterior confirms a mechanistic possibility that was previously
       inferred from the evolutionary history of birds.
 
+  - highlight: 0
+    title: Transposition and intermingling of Gαi2 and Gαo afferences into single
+      vomeronasal glomeruli in the Madagascan lesser tenrec Echinops telfairi.
+    description: >+
+      Abstract. The vomeronasal system (VNS) mediates pheromonal communication
+      in mammals. From the vomeronasal organ, two populations of sensory
+      neurons, expressing either Gαi2 or Gαo proteins, send projections that end
+      in glomeruli distributed either at the rostral or caudal half of the
+      accessory olfactory bulb (AOB), respectively. Neurons at the AOB contact
+      glomeruli of a single subpopulation. The dichotomic segregation of AOB
+      glomeruli has been described in opossums, rodents and rabbits, while
+      Primates and Laurasiatheres present the Gαi2-pathway only, or none at all
+      (such as apes, some bats and aquatic species). We studied the AOB of the
+      Madagascan lesser tenrec Echinops telfairi (Afrotheria: Afrosoricida) and
+      found that Gαi2 and Gαo proteins are expressed in rostral and caudal
+      glomeruli, respectively. However, the segregation of vomeronasal glomeruli
+      at the AOB is not exclusive, as both pathways contained some glomeruli
+      transposed into the adjoining subdomain. Moreover, some glomeruli seem to
+      contain intermingled afferences from both pathways. Both the transposition
+      and heterogeneity of vomeronasal afferences are features, to our
+      knowledge, never reported before. The organization of AOB glomeruli
+      suggests that synaptic integration might occur at the glomerular layer.
+      Whether intrinsic AOB neurons may make synaptic contact with axon
+      terminals of both subpopulations is an interesting possibility that would
+      expand our understanding about the integration of vomeronasal pathways.
+
+    authors: Suárez, R., Villalón, A., Künzle, H., & Mpodozis, J. (2009)
+    link:
+      url: https://journals.plos.org/plosone/article?id=10.1371/journal.pone.0008005
+      display: "PLoS ONE 4(11): e8005, 1-6. doi: 10.1371/journal.pone.0008005."
