Update Listas “publicaciones”

--- a/_data/publications.yml
+++ b/_data/publications.yml
@@ -1098,7 +1098,7 @@ papers:
     authors: Martínez-Harms, J., Palacios, A. G., Márquez, N., Estay, P., Arroyo, M.
       T. K., & Mpodozis, J. (2010)
     link:
-      display: "Journal of Experimental Biology, 213: 564-571; doi: 10.1242/jeb.037622."
+      display: "Journal of Experimental Biology, 213: 564-571. doi: 10.1242/jeb.037622."
       url: https://jeb.biologists.org/content/213/4/564
     description: Abstract. It has been argued that trichromatic bees with
       photoreceptor spectral sensitivity peaks in the ultraviolet (UV), blue and
