Update Listas “publicaciones”

--- a/_data/publications.yml
+++ b/_data/publications.yml
@@ -958,7 +958,7 @@ papers:
       myopic part of the retina."
     link:
       url: https://journals.plos.org/plosone/article?id=10.1371/journal.pone.0037816
-      display: "PLoS ONE 7(5): e37816, . doi: 10.1371/journal.pone.0037816."
+      display: "PLoS ONE 7(5): e37816, 1-14. doi: 10.1371/journal.pone.0037816."
     authors: Gutiérrez-Ibáñez, C., Iwaniuk, A. N., Lisney, T. J., Faunes, M., Marín,
       G. J., & Wylie, D. R. (2012)
     image: /images/uploads/gutierrez-ibañez2012.png
