Update Listas “publicaciones”

--- a/_data/publications.yml
+++ b/_data/publications.yml
@@ -1230,3 +1230,91 @@ papers:
     link:
       url: https://journals.plos.org/plosone/article?id=10.1371/journal.pone.0008005
       display: "PLoS ONE 4(11): e8005, 1-6. doi: 10.1371/journal.pone.0008005."
+  - highlight: 0
+    title: "Heterogeneities of size and sexual dimorphism between the subdomains of
+      the lateral-innervated accessory olfactory bulb (AOB) of Octodon degus
+      (Rodentia: Hystricognathi)."
+    description: >-
+      Abstract. The vomeronasal system (VNS) of rodents participates in the
+      regulation of a variety of social and sexual behaviours related to
+      semiochemical communication. All rodents studied so far possess two
+      parallel pathways from the vomeronasal organ (VNO) to the accessory
+      olfactory bulb (AOB). These segregated afferences express either Gi2 or Go
+      protein α-subunits and innervate the rostral or caudal half of the AOB,
+      respectively. In muroid rodents, such as rats and mice, both subdivisions
+      of the AOB are of similar proportions; as there is no anatomical feature
+      indicative of the segregation, histochemical detection has been required
+      to portray its boundary.
+
+
+      We studied the AOB of Octodon degus, a diurnal caviomorph rodent endemic to central Chile, and found several distinctive traits not reported in a rodent before: (i) the vomeronasal nerve innervates the AOB from its lateral aspect, in opposition to the medial innervation described in rabbits and muroids, (ii) an indentation that spans all layers delimits the boundary between the rostral and caudal AOB subdivisions (rAOB and cAOB, respectively), (iii) the rAOB is twice the size of the cAOB and features more and larger glomeruli, and (iv) the rAOB, but not the cAOB, shows male-biased sexual dimorphisms in size and number of glomeruli, while the cAOB, but not the rAOB, shows a male-biased dimorphism in mitral cell density.
+
+
+      The heterogeneities we describe here within AOB subdomains suggest that these segregated regions may engage in distinct operationalities. We discuss our results in relation to conspecific semiochemical communication in O. degus, and present it as a new animal model for the study of VNS neurobiology and evolution.
+    authors: Suárez, R., & Mpodozis, J. (2009)
+    link:
+      url: https://www.sciencedirect.com/science/article/pii/S016643280800613X
+      display: "Behavioural Brain Research, 198, 2, 306-312. doi:
+        10.1016/j.bbr.2008.11.009."
+  - highlight: 0
+    title: Novel, continuous visual motion induces c-fos expression in the avian
+      optokinetic nuclei and optic tectum.
+    description: >+
+      Abstract. We studied the stimulus characteristics necessary for the
+      expression of c-fos protein in optokinetic system neurons using
+      immunocytochemistry. Using whole-field visual motion as a stimulus, we
+      found substantial c-fos expression in the optic tectum (TeO), the nucleus
+      of the basal optic root (nBOR) and the pretectal nucleus lentiformis
+      mesencephali (LM); in all cases immunostaining was seen only on the side
+      contralateral to the eye viewing whole-field unidirectional motion; the
+      side of the brain contralateral to the eye wearing a diffuser showed no
+      staining. In the nBOR and the LM, different regions showed a remarkable
+      specificity of c-fos expression depending on the direction of visual
+      motion stimulation. Neurons were stained primarily in regions known from
+      previous electrophysiological recordings to be maximally responsive to
+      that direction of motion; little staining was seen after motion orthogonal
+      to the preferred motion direction. Novel, continuous visual motion
+      stimuli, lasting more than 30 min, was required for maximal c-fos
+      expression, suggesting that brief periods of unidirectional optic flow, as
+      would be experienced during normal life, do not stimulate the expression
+      of c-fos. The largest number of neurons was labeled when birds raised from
+      hatching with one eye covered by a diffuser were exposed to full-field
+      visual motion immediately after the diffuser was switched from one eye to
+      the other, so that only the previously naive eye was visually stimulated.
+      We conclude that the expression of c-fos in the optokinetic nuclei is
+      linked to near peak firing rates on the one hand, and the novelty and
+      duration of the visual signals, on the other, supporting the assumption
+      that this expression is mainly related to stimulus contexts leading to
+      neuronal plastic changes.
+
+    authors: Rojas, X., Marín, G., & Wallman, J. (2009)
+    link:
+      url: https://www.sciencedirect.com/science/article/abs/pii/S0306452209001985
+      display: "Neuroscience, 160, 2, 540-554. doi: 10.1016/j.neuroscience.2009.02.018."
+  - highlight: 0
+    title: Patterns of skull variation of brachydelphis (Cetacea, Odontoceti) from
+      the neogene of the southeastern pacific.
+    link:
+      url: https://academic.oup.com/jmammal/article/90/2/504/900396
+      display: "Journal of Mammalogy, 90, 2, 504–519. doi: 10.1644/07-MAMM-A-081.1"
+    description: >+
+      Abstract. Brachydelphis mazeasi Muizon, 1988a, from the Pisco Formation
+      (middle Miocene, Peru), is an odontocete originally known from 2
+      incomplete skulls and a few associated postcranial elements, assigned to
+      the family Pontoporiidae, and to the subfamily Brachydelphininae (=
+      Brachydelphinae) created to include this genus. The holotype is considered
+      here as a juvenile because it has no alveolar septa and presents wide-open
+      cranial sutures. Consequently, some of the diagnostic features actually
+      correspond to juvenile features and are not taxonomically significant.
+      Here we offer a more comprehensive view of the morphology and variation of
+      this taxon with new specimens from both Pisco and Bahía Inglesa formations
+      (late Miocene, Chile). A revision of the original description of the
+      genus, compared to other taxa of the Inioidea clade is provided.
+      Additionally, a comparison by morphometric analysis (geometric and
+      traditional) to Pontoporia blainvillei (living Pontoporiidae) is given.
+      The shape variation of fetal, young, and adult specimens of P. blainvillei
+      was compared to specimens of juvenile and adult B. mazeasi to evaluate
+      ontogenetic, individual, and interspecific variation.
+
+    authors: Gutstein, C. S., Cozzuol, M. A., Vargas, A. O., Suárez, M. E., Schultz,
+      C. L., & Rubilar-Rogers, D. (2009)
