Update Listas “publicaciones”

--- a/_data/publications.yml
+++ b/_data/publications.yml
@@ -1358,3 +1358,75 @@ papers:
     link:
       url: https://journals.plos.org/plosone/article?id=10.1371/journal.pone.0003325
       display: " PLoS ONE 3(10): e3325, 1-7. doi: 10.1371/journal.pone.0003325."
+  - highlight: 0
+    title: Differences of morphological and ecological characters among lineages of
+      Chilean Rhinocryptidae in relation an sister lineage of Furnariidae.
+    description: >+
+      Abstract. Eight species of Rhinocryptidae are recognized from Chile.
+      Moreover, morphological, ecological and behavioral differences among two
+      lineages of Scytalopus and two species of Pteroptochos are unclear.
+      According to our results, there are no decisive criteria differentiating
+      among subspecific sister taxa of Scelorchilus albicollis, S. rubecula and
+      Pteroptochos megapodius. Here we discuss the speciation of the chilean
+      Rhinocryptidae based in their behaviour. We propose a new methodology
+      based on ecological and behavioural patterns in order to understand the
+      concept of speciation in this group of birds.
+
+    authors: Correa Rueda, A., Mpodozis, J., & Sallaberry, M. (2008)
+    link:
+      url: https://www.nature.com/articles/npre.2008.1606.1
+      display: "Nature Precedings. doi: 10.1038/npre.2008.1606.1."
+  - highlight: 0
+    title: Speciation of chilean Rhinocryptidae (Avian) based on their behaviour.
+    description: Abstract. The current classification of the chilean representatives
+      of the passerine family Rhinocryptidae includes eight species. Three of
+      them contain subspecies that don’t exhibit clear differences. Moreover,
+      differences among two lineages of Scytalopus genera and two species of
+      Pteroptochos are very scarce. We propose a new methodology based on
+      ecological and behavioural patterns in order to understand the concept of
+      speciation in this group of birds. According to our results, we postulate
+      that there is not a cut criteria to establish differences among three
+      sister lineages of current classification. This way the methodology
+      developed by us does not allow to establish divergence for a given common
+      ancestor. Our methodology allows to establish comparison among previously
+      determined phylogenetic lineages. Our results show how when integrating
+      behaviour and ecological terms as biological traits next to morphological
+      characters of the plumage, it allows us to conclude that there is decrease
+      of the distances among sister lineages in the cluster tree.
+    authors: Correa, A., & Mpodozis, J. (2008)
+    link:
+      url: https://www.nature.com/articles/npre.2008.1597.2
+      display: "Nature Precedings. doi: 10.1038/npre.2008.1597.2."
+  - highlight: 0
+    title: A cholinergic gating mechanism controlled by competitive interactions in
+      the optic tectum of the pigeon.
+    link:
+      url: https://www.jneurosci.org/content/27/30/8112
+      display: "Journal of Neuroscience, 27, (30), 8112-8121. doi:
+        10.1523/JNEUROSCI.1420-07.2007"
+    description: Abstract. We describe the operation of a midbrain neural circuit in
+      pigeons that may participate in selecting and attending to one visual
+      stimulus from the myriad displayed in their visual environment. This
+      mechanism is based on a topographically organized cholinergic signal
+      reentering the optic tectum (TeO). We have shown previously that, whenever
+      a visual stimulus activates neurons in a given tectal location, this
+      location receives a strong bursting feedback from cholinergic neurons of
+      the nucleus isthmi pars parvocellularis (Ipc), situated underneath the
+      tectum. Here we show that, if a second visual stimulus is presented, even
+      far from the first, the feedback signal to the first tectal location is
+      diminished or suppressed, and feedback to the second tectal location is
+      initiated. We found that this long-range suppressive interaction is mostly
+      mediated by the nucleus isthmi pars magnocellularis, which sends a
+      wide-field GABAergic projection to Ipc and TeO. In addition, two sets of
+      findings indicate that the feedback from the Ipc modulates the ascending
+      output from the TeO. First, visually evoked extracellular responses
+      recorded in the dorsal anterior subdivision of the thalamic nucleus
+      rotundus (RtDa), receiving the ascending tectal output, are closely
+      synchronized to this feedback signal. Second, local inactivation of the
+      Ipc prevents visual responses in RtDa to visual targets moving in the
+      corresponding region of visual space. These results suggest that the
+      ascending transmission of visual activity through the tectofugal pathway
+      is gated by this cholinergic re-entrant signal, whose location within the
+      tectal visual map is dynamically defined by competitive interactions.
+    authors: Marín, G., Salas, C., Sentis, E., Rojas, X., Letelier, J. C., &
+      Mpodozis, J. (2007)
